fixed post username and title in modal post to go to new line if too long

--- a/CSS/Profile/userpage.css
+++ b/CSS/Profile/userpage.css
@@ -202,6 +202,11 @@ li{
     max-width: 700px;
 }
 
+.modal-header h3 {
+    overflow-wrap: break-word; /* Fai andare a capo anche se non ci sono spazi */
+    max-width: 100%; /* Assicurati che l'h3 non superi la larghezza del contenitore */
+}
+
 #photo-id, #video-id {
     width: 100%;
     aspect-ratio: 1;
